force-app/main/default/objects/ASF_FieldConfigurationRecord__c/ASF_FieldConfigurationRecord__c.object-meta.xml
<CustomObject>
    <label>Field Config Record</label>
    <nameField>
        <label>Field Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Config Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>