force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/API_Input__c.field-meta.xml
<CustomField>
    <fullName>API_Input__c</fullName>
    <label>API Input</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FA_Number__c</fullName>
            </value>
            <value>
                <fullName>Account_CRN__c</fullName>
            </value>
            <value>
                <fullName>AssetId</fullName>
            </value>
            <value>
                <fullName>AccountId</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>