force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_AdditionalCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ASF_AdditionalCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Checkbox</label>
    <type>Checkbox</type>
</CustomField>