force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_AdditionalText__c.field-meta.xml
<CustomField>
    <fullName>ASF_AdditionalText__c</fullName>
    <label>Additional Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>