force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ASF_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>