force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_FieldApi__c.field-meta.xml
<CustomField>
    <fullName>ASF_FieldApi__c</fullName>
    <label>Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>