force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_FieldName__c.field-meta.xml
<CustomField>
    <fullName>ASF_FieldName__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>