force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_FieldPositioning__c.field-meta.xml
<CustomField>
    <fullName>ASF_FieldPositioning__c</fullName>
    <label>Field Positioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section Header</fullName>
            </value>
            <value>
                <fullName>Table Header</fullName>
            </value>
            <value>
                <fullName>Column Header</fullName>
            </value>
            <value>
                <fullName>Table Actions</fullName>
            </value>
            <value>
                <fullName>Tab Header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>