force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_GroupName__c.field-meta.xml
<CustomField>
    <fullName>ASF_GroupName__c</fullName>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>