force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_HasTooltip__c.field-meta.xml
<CustomField>
    <fullName>ASF_HasTooltip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Tooltip</label>
    <type>Checkbox</type>
</CustomField>