force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_IsMasked__c.field-meta.xml
<CustomField>
    <fullName>ASF_IsMasked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Masked</label>
    <type>Checkbox</type>
</CustomField>