force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_IsMaskingRule__c.field-meta.xml
<CustomField>
    <fullName>ASF_IsMaskingRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Masking Rule Applied</label>
    <type>Checkbox</type>
</CustomField>