force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_IsSort__c.field-meta.xml
<CustomField>
    <fullName>ASF_IsSort__c</fullName>
    <label>Is Sort</label>
    <length>50</length>
    <type>Text</type>
</CustomField>