force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_IsVisible__c.field-meta.xml
<CustomField>
    <fullName>ASF_IsVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible on UI</label>
    <type>Checkbox</type>
</CustomField>