force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_JSONFieldName__c.field-meta.xml
<CustomField>
    <fullName>ASF_JSONFieldName__c</fullName>
    <label>JSON Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>