force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_MaskedRoles__c.field-meta.xml
<CustomField>
    <fullName>ASF_MaskedRoles__c</fullName>
    <label>Masked Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>