force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_MaskRegex__c.field-meta.xml
<CustomField>
    <fullName>ASF_MaskRegex__c</fullName>
    <label>Mask Regex</label>
    <length>50</length>
    <type>Text</type>
</CustomField>