force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_NoAccessRoles__c.field-meta.xml
<CustomField>
    <fullName>ASF_NoAccessRoles__c</fullName>
    <label>No Access Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>