force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ASF_OrderNumber__c</fullName>
    <label>Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>