force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>ASF_PicklistValues__c</fullName>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>