force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_ProfilesVisibility__c.field-meta.xml
<CustomField>
    <fullName>ASF_ProfilesVisibility__c</fullName>
    <label>Profiles Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>CS360 Profile</fullName>
            </value>
            <value>
                <fullName>Payment Base Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>