force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_SelectList__c.field-meta.xml
<CustomField>
    <fullName>ASF_SelectList__c</fullName>
    <label>SelectList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Select</fullName>
            </value>
            <value>
                <fullName>Multi Select</fullName>
            </value>
            <value>
                <fullName>Radio Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>