force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_ToolTipText__c.field-meta.xml
<CustomField>
    <fullName>ASF_ToolTipText__c</fullName>
    <label>Tool Tip Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>