force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_UnmaskedRoles__c.field-meta.xml
<CustomField>
    <fullName>ASF_UnmaskedRoles__c</fullName>
    <label>Unmasked Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>