force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/ASF_WrapText__c.field-meta.xml
<CustomField>
    <fullName>ASF_WrapText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wrap Text</label>
    <type>Checkbox</type>
</CustomField>