force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/Enable_for_UI_card__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_UI_card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for UI card</label>
    <type>Checkbox</type>
</CustomField>