force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/Is_To_be_Copied__c.field-meta.xml
<CustomField>
    <fullName>Is_To_be_Copied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for UI Backend</label>
    <type>Checkbox</type>
</CustomField>