force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/Is_UI_Card_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_UI_Card_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UI Card Parent</label>
    <type>Checkbox</type>
</CustomField>