force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/Parsing_Type__c.field-meta.xml
<CustomField>
    <fullName>Parsing_Type__c</fullName>
    <label>Parsing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tabular</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>