force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/Response_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Response_Object_Name__c</fullName>
    <label>Response Object Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>