force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/Small_Device_Column_Width__c.field-meta.xml
<CustomField>
    <fullName>Small_Device_Column_Width__c</fullName>
    <label>Small Device Column Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>