force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/SR_Stage_to_Run_API__c.field-meta.xml
<CustomField>
    <fullName>SR_Stage_to_Run_API__c</fullName>
    <label>SR Stage to Run API</label>
    <type>TextArea</type>
</CustomField>