force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/UI_Card_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>UI_Card_Group_Name__c</fullName>
    <label>UI Card Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>