force-app/main/default/objects/ASF_FieldConfigurationRecord__c/fields/UI_card_setup__c.field-meta.xml
<CustomField>
    <fullName>UI_card_setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UI card setup</label>
    <type>Checkbox</type>
</CustomField>